methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value estFaceMure
  while (!estFaceMure()) {
          ^