methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
	while (!estFaceMure()) {
    
  	avance();
    
    if (getCouleurSol() == Color.green) {
      
      recule();
      
      return true
      
    }
    
  }
  
  return false
  
}